# slamdunk_ros

./: .MODULE_LICENSE_BSD  .clang-format  .gitignore  COPYING  README.md  ros_target.sh
bebop_robot/: CMakeLists.txt  atom.mk  nodelet_plugins.xml  package.xml
bebop_robot/config/: logitech_F310.yaml
bebop_robot/src/: bebop_node.cpp  bebop_nodelet.cpp  bebop_nodelet.hpp
bebop_visualization/: CMakeLists.txt  atom.mk  package.xml  rviz_plugins.xml
bebop_visualization/src/: ARSDKPanel.cpp  ARSDKPanel.hpp
slamdunk_bebop_joystick/: CMakeLists.txt  atom.mk  package.xml
slamdunk_bebop_joystick/config/: logitech_F310.yaml
slamdunk_bebop_joystick/launch/: joystick.launch
slamdunk_bebop_robot/: CMakeLists.txt  atom.mk  nodelet_plugins.xml  package.xml
slamdunk_bebop_robot/launch/: bebop_config.launch  bebop_default.launch  bebop_nodelet.launch
slamdunk_bebop_robot/src/: bebop_node.cpp  bebop_nodelet.cpp  bebop_nodelet.hpp
slamdunk_bebop_visualization/: CMakeLists.txt  atom.mk  package.xml  rviz_plugins.xml
slamdunk_bebop_visualization/src/: ARSDKPanel.cpp  ARSDKPanel.hpp
slamdunk_launchers/: CMakeLists.txt  atom.mk  package.xml
slamdunk_launchers/launch/: bebop_config.launch  bebop_nodelet.launch  joystick.launch  local_teleop.launch  local_xyzrgb_concat.launch  rviz_local_teleop.launch  rviz_teleop.launch  slamdunk_interdrone_flight_demo.launch  slamdunk_interdrone_pcl_demo.launch  teleop.launch
slamdunk_msgs/: CMakeLists.txt  atom.mk  package.xml
slamdunk_msgs/msg/: BoolStamped.msg  Quality.msg  QualityStamped.msg  ReconfigureLevels.msg  ServiceTrigger.msg  StreamingTypes.msg  VideoModes.msg  VideoSources.msg
slamdunk_msgs/srv/: Save.srv
slamdunk_node/: CMakeLists.txt  atom.mk  package.xml
slamdunk_node/cfg/: SLAMDunkNode.cfg
slamdunk_node/launch/: slamdunk.launch
slamdunk_node/src/: cvutils.cpp  cvutils.hpp  main.cpp
slamdunk_nodelets/: CMakeLists.txt  atom.mk  nodelet_plugins.xml  package.xml
slamdunk_nodelets/launch/: gscam.launch
slamdunk_nodelets/src/: goodframe_publisher_nodelet.cpp  goodframe_publisher_nodelet.hpp  keyframe_publisher_nodelet.cpp  keyframe_publisher_nodelet.hpp  pcl_xyzrgb_concat_node.cpp  pcl_xyzrgb_concat_nodelet.cpp  pcl_xyzrgb_concat_nodelet.hpp  pcl_xyzrgb_record_nodelet.cpp  pcl_xyzrgb_record_nodelet.hpp  pose_to_path_nodelet.cpp  pose_to_path_nodelet.hpp
slamdunk_visualization/: CMakeLists.txt  atom.mk  package.xml  rviz_plugins.xml
slamdunk_visualization/models/: slamdunk.mesh  slamdunk.stl
slamdunk_visualization/rqt/: slamdunk.perspective
slamdunk_visualization/rviz/: slamdunk.rviz  slamdunk_interdrone_flight_demo.rviz
slamdunk_visualization/src/: SLAMDunkPanel.cpp  SLAMDunkPanel.hpp  SLAMDunkPoseDisplay.cpp  SLAMDunkPoseDisplay.hpp  SLAMDunkQualityDisplay.cpp  SLAMDunkQualityDisplay.hpp
slamdunk_visualization/urdf/: HOWTO  slamdunk.urdf
