<?xml version="1.0"?>
<package>
  <name>slamdunk_bebop_joystick</name>
  <version>0.0.0</version>
  <description>
    ROS package containing configuration and launch files to control Bebop 2 with a joystick or a gamepad.
  </description>

  <maintainer email="slamdunk@parrot.com">S.L.A.M.dunk</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>joy_teleop</run_depend>
  <run_depend>joy</run_depend>
</package>
