<?xml version="1.0"?>
<package>
  <name>slamdunk_bebop_robot</name>
  <version>0.0.0</version>
  <description>Bebop robot node</description>

  <maintainer email="slamdunk@parrot.com">S.L.A.M.dunk</maintainer>
  <license>BSD</license>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
</package>
