<?xml version="1.0"?>
<package>
  <name>slamdunk_bebop_visualization</name>
  <version>0.0.0</version>
  <description>Bebop visualization utils</description>

  <maintainer email="slamdunk@parrot.com">S.L.A.M.dunk</maintainer>
  <license>BSD</license>

  <export>
    <rviz plugin="${prefix}/rviz_plugins.xml"/>
  </export>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>qtbase5-dev</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>libqt5-core</run_depend>
  <run_depend>libqt5-gui</run_depend>
  <run_depend>libqt5-widgets</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
