<?xml version="1.0"?>
<package>
  <name>slamdunk_launchers</name>
  <version>0.0.0</version>
  <description>SLAMDunk launch files to bring up nodes easily</description>

  <maintainer email="slamdunk@parrot.com">S.L.A.M.dunk</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>bebop_robot</run_depend>
  <run_depend>slamdunk_node</run_depend>
  <run_depend>slamdunk_nodelets</run_depend>
  <run_depend>slamdunk_visualization</run_depend>

</package>
