<?xml version="1.0"?>
<package>
  <name>slamdunk_msgs</name>
  <version>0.0.0</version>
  <description>Parrot S.L.A.M.dunk messages</description>

  <maintainer email="slamdunk@parrot.com">S.L.A.M.dunk</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
