<?xml version="1.0"?>
<package>
  <name>slamdunk_nodelets</name>
  <version>0.0.0</version>
  <description>Parrot S.L.A.M.dunk nodelets</description>

  <maintainer email="slamdunk@parrot.com">S.L.A.M.dunk</maintainer>
  <license>BSD</license>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>image_transport</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>slamdunk_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>image_transport</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>slamdunk_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
